@@ -44,6 +44,7 @@ java ^
   --add-modules javafx.controls,javafx.fxml ^
   --add-opens javafx.base/com.sun.javafx.event=ALL-UNNAMED ^
   --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED ^
+  --add-opens javafx.fxml/javafx.fxml=ALL-UNNAMED ^
   -cp "%CP%" ^
   com.squeezeit.MainApp
 
